# sdk-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: SkailarConfig.cmake.in  version.hpp.in
examples/: CMakeLists.txt
examples/chat/: main.cpp
examples/speech/: main.cpp
examples/streaming/: main.cpp
examples/tool_calling/: main.cpp
examples/vision/: main.cpp
include/skailar/: audio.hpp  chat.hpp  client.hpp  config.hpp  errors.hpp  images.hpp  json_fwd.hpp  model_ids.hpp  models.hpp  ping.hpp  skailar.hpp  streaming.hpp  types_shared.hpp  uploads.hpp
ports/skailar/: portfile.cmake  vcpkg.json
src/: audio.cpp  chat.cpp  client.cpp  client_impl.hpp  errors.cpp  http_client.cpp  http_client.hpp  images.cpp  models.cpp  ping.cpp  sse_parser.cpp  sse_parser.hpp  streaming.cpp  streaming_internal.hpp  uploads.cpp
src/internal/: string_utils.hpp
src/serialization/: audio_serialization.cpp  chat_serialization.cpp  images_serialization.cpp  json_helpers.hpp  models_serialization.cpp  shared_serialization.cpp  uploads_serialization.cpp
tests/: CMakeLists.txt  mock_server.hpp  test_audio.cpp  test_chat.cpp  test_client.cpp  test_errors.cpp  test_images.cpp  test_models.cpp  test_retries.cpp  test_sse_parser.cpp  test_streaming.cpp  test_support.hpp  test_uploads.cpp
versions/: baseline.json
versions/s-/: skailar.json
